Added refresh sum of child task duration action

--- a/OFTimer.omnifocusjs/manifest.json
+++ b/OFTimer.omnifocusjs/manifest.json
@@ -11,6 +11,9 @@
         {
             "image": "stop.png",
             "identifier": "endTimer"
+        },
+        {
+            "identifier": "sumProjectDuration"
         }
     ],
     "libraries": [
